# boite_a_panpan

./: .gitignore  Cargo.toml  boite_a_panpan-a41f2010968f7941.js  boite_a_panpan-a41f2010968f7941_bg.wasm  index.html
.github/workflows/: gh-pages-deploy.yml
autre/: page.html
public/style/: main.css
src/: lib.rs  main.rs
style/: main.css
