[package]
name = "boite_a_panpan"
version = "0.1.0"
edition = "2021"

[dependencies]
#[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8", features = ["ssr"] }


